# amazo

./: .gitignore  Dockerfile  JOURNAL.md  README.md  main.py  pyproject.toml  run_interface.sh
templates/: dashboard.html
tests/: test_tools.py
